--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .header {
     background-color: #1F2937;
     display: flex;
@@ -60,12 +64,25 @@ ul {
 
 .info {
     text-align: center;
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
 
 .content-top {
     display: flex;
     gap: 52px;
     justify-content: center;
+    margin-bottom: 34px;
+}
+
+.info {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.text {
+    font-size: 16px;
 }
 
 .image-set {
@@ -74,7 +91,10 @@ ul {
 
 .content-image {
     width: 300px;
-    height: auto;
+    height: 230px;
+    border-radius: 10px;
+    border: 5px solid;
+    border-color: #3882f6;
 }
 
 button {
@@ -82,4 +102,73 @@ button {
     color: white;
     width: 100px;
     height: 30px;
+    border-radius: 8px;
+}
+
+.content-middle {
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.quote-text {
+    font-size: 36px;
+    color: #1f2937;
+    font-style: italic;
+    width: 700px;
+    font-weight: 100;
+}
+
+.quote-source {
+    font-weight: 800;
+    font-size: 18px;
+    margin-left: 440px;
+}
+
+.content-bottom {
+    background-color: #3882f6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 800px;
+    margin: 50px auto;
+    height: 150px;
+    gap: 100px;
+    border-radius: 16px;
+}
+
+.action, .call {
+    color: white;
+}
+
+.call {
+    font-weight: 900;
+    font-size: 22px;
+}
+
+.action {
+    font-size: 18px;
+}
+
+.bottom-button {
+    border-color: white;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #f9faf8;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+}
+
+.footer span {
+    padding-left: 10px;
+    padding-right: 10px;
 }
